[bp/r39061][ENH]This button was way too big for anonymous users, and unluckily the errors need to be shown to anonymous users in some sites - servers in order to have their tikis avoid blank pages when some error occurs.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/proposals@39062 b456876b-0849-0410-b77d-98878d47e9d5

--- a/6.x/styles/layout/design.css
+++ b/6.x/styles/layout/design.css
@@ -1217,6 +1217,9 @@ textarea.tshoutbox{
 	padding: 0;
 }
 
+/* Button from 'Show php error messages' hidden box */
+.button[id="show-errors-button"]{font-size:5%;}
+
 /* webmail & groupmail */
 .webmail_item {
 	font-size: .9em;
